endpoint_autogen
mejorar documentacion para openapi
